2009-01-29 Alexander Malysh <amalysh at kannel.org>
    * gwlib/octstr.c, test/test_octstr_format.c: applied patch that adds
      support for %llu, %llx etc. to octstr_format. Also added test.
      Thanks to Nikos Balkanas <nbalkanas at gmail.com> for patch.
      [Msg-Id: <7f4386bc0901290255y3f8f44feya6132b138b0b6003@mail.gmail.com>]

2009-01-26  Stipe Tolj  <stolj at kannel.org>
    * gwlib/http.c: fix the recover_absolute_uri() to handle HTTPS connections
      to port 80 too, via applying the port 80 to the URL scheme if the
      connection IS SSL-enabled. Thanks to Martin for the vetoing.
      [Msg-Id: <92cf04420901251835k5f0636acueafdfd17f8147355@mail.gmail.com>]
       
2009-01-25  Stipe Tolj  <stolj at kannel.org>
    * gwlib/http.c: add function recover_absolute_uri() to handle partly
      incomplete absoluteURI values in redirect HTTP headers.
      [Msg-Id: <4979FB14.2000600@tolj.org>]
  
2009-01-21 Alexander Malysh <amalysh at kannel.org>
    * utils/makedist: added sha1 digest for packages.

2009-01-21 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smsc_smpp.c: fixed panic due to the unsupported %llu
      format in octstr_format.

2009-01-14 Alexander Malysh <amalysh at kannel.org>
    * doc/userguide/userguide.xml, gw/bb_alog.c, gw/bb_smscconn.c,
      gw/meta_data.[ch],gw/msg-decl.h,gw/smsbox.c,gw/smsc/smpp_pdu.[ch],
      gw/smsc/smsc_http.c,gw/smsc/smsc_smpp.c,gw/urltrans.c,gwlib/cfg.def,
      test/drive_smpp.c,test/drive_smpp.conf: merged meta-data branch.

2009-01-13  Stipe Tolj  <stolj at kannel.org>
    * test/test_http_server.c: fixing Alex's previous committ clash. NLC.

2009-01-13 Alexander Malysh <amalysh at kannel.org>
    * test/test_http_server.c: fixed memleak.

2009-01-12  Stipe Tolj  <stolj at kannel.org>
    * Making stable release 1.4.2.